# opper-python

./: .gitignore  CLAUDE.md  Makefile  README.md  SPEAKEASY_PATCH_README.md  USAGE.md  opper-python.mdc  package-lock.json  pyproject.toml  pytest.ini  test.py
.devcontainer/: README.md  setup.sh
.github/workflows/: generate-sdk.yml  index.yml  publish.yml  release.yml  validate-pr.yml
.speakeasy/: gen.yaml  speakeasy-modifications-overlay.yaml  workflow.yaml
docs/errors/: badrequesterror.md  conflicterror.md  error.md  notfounderror.md  requestvalidationerror.md  unauthorizederror.md
docs/models/: addknowledgeknowledgebaseidaddpostrequest.md  addknowledgeknowledgebaseidindexpostrequest.md  addrequest.md  annotation.md  annotationurlcitation.md  appapipublicv2functioncallcallfunctionrequest.md  appapipublicv2functioncallcallfunctionresponse.md  appapipublicv2functionscallfunctionrequest.md  appapipublicv2functionscallfunctionresponse.md  audio.md  bodyuploadfileknowledgeknowledgebaseiduploadpost.md  bodyuploadfileknowledgeknowledgebaseiduploadpostfile.md  callfunctionfunctionsfunctionidcallpostrequest.md  callfunctionrevisionfunctionsfunctionidcallrevisionidpostrequest.md  chatcompletion.md  chatcompletionallowedtoolchoiceparam.md  chatcompletionallowedtoolsparam.md  chatcompletionassistantmessageparam.md  chatcompletionassistantmessageparamcontent1.md  chatcompletionassistantmessageparamcontent2.md  chatcompletionassistantmessageparamtoolcall.md  chatcompletionaudio.md  chatcompletionaudioparam.md  chatcompletionaudioparamformat.md  chatcompletioncontentpartimageparam.md  chatcompletioncontentpartinputaudioparam.md  chatcompletioncontentpartrefusalparam.md  chatcompletioncontentparttextparam.md  chatcompletioncustomtoolparam.md  chatcompletiondevelopermessageparam.md  chatcompletiondevelopermessageparamcontent.md  (+275 more)
docsgen/: README.md  docsgen.py
examples/: async_embeddings_example.py  audio.py  calls.py  datasets.py  embeddings.py  embeddings_example.py  evaluation.py  fn_decorator.py  functions.py  images.py  indexes.py  multimodal.py  pdf.py  question_answering_kb.py  readme.py  tracing.py  tracing_manual.py
integration_tests/: run_examples.py
scripts/: apply_schema_patch.py  publish.sh
tests/: conftest.py  test_asyinc_functions.py  test_async_functions.py  test_async_indexes.py  test_async_spans.py  test_client.py  test_decorator.py  test_events.py  test_fn_decorator.py  test_functions.py  test_indexes.py  test_spans.py  test_trace_decorator.py  test_types.py  test_utils.py  test_version.py
(+621 files in other folders)
