[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opperai"
version = "0.3.3"
description = "Opper Python client"
authors = [
  {name = "Opper", email = "opper@opper.ai"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "httpx",
    "httpx-sse"
]
readme = "README.md"

[project.urls]
Homepage = "https://opper.ai"
Documentation = "https://docs.opper.ai"
Platform = "https://platform.opper.ai"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "vcrpy"
]


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
