[tool.poetry]
name = "opperai"
version = "0.23.0"
description = "Opper Python client"
authors = ["Opper <support@opper.ai>"]
readme = "README.md"
packages = [{include = "opperai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "*"
httpx = "0.27.0"
httpx-sse = "0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
vcrpy = "6.0.1"
jsonschema = "*"
toml = "*"
ruff = "0.6.1"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Add your ruff configuration here
