[project]
name = "opperai"
version = "0.31.1"
description = "Opper Python client"
authors = [{ name = "Opper", email = "support@opper.ai" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "pydantic>=2",
    "httpx>=0.27.0,<1.0.0",
    "httpx-sse>=0.4.0,<1.0.0",
]

[dependency-groups]
test = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "vcrpy==6.0.1",
    "jsonschema",
    "toml",
    "ruff==0.11.7",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["src/opperai"]

[tool.hatch.build.targets.wheel]
include = ["src/opperai"]

[tool.hatch.build.targets.wheel.sources]
"src/opperai" = "opperai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# Add your ruff configuration here
